--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-section">
+<footer class="footer-section" id="footer">
     <div class="footer-container">
         <div class="footer-logo-section">
             <p class="footer-slogan"><span class="footer-span">Chocolate</span> a delicious cure for a bad day</p>
