--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,7 @@
         </div>
         <div class="scroll-button">
           <p class="last-button-text">scroll down</p>
-          <button type="button" class="scroll" href="#">
+          <button type="button" class="scroll" href="#footer">
             <svg class="icon-scroll" width="16" height="16">
               <use href="./img/sprite.svg#icon-hero-scroll-down"></use>
             </svg>
