--- a/src/partials/explore-our-new-chocolate-first.html
+++ b/src/partials/explore-our-new-chocolate-first.html
@@ -7,7 +7,7 @@
       src="./img/explore_our_new_chocolate_first/explore_desk_2x.jpg"
       alt="photo"
     />
-    <button type="button" data-modal-close class="modal-close">
+    <button type="button" data-modal-close-1 class="modal-close">
       <svg class="explore-icon-modal-btn" width="24" height="24">
         <use href="./img/sprite.svg#icon-vector"></use>
       </svg>
