--- a/src/css/modal-review.css
+++ b/src/css/modal-review.css
@@ -21,7 +21,7 @@
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden-2 {
-  scale: 0;
+  opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
