--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,133 +1,141 @@
 .subsribe-section {
-    padding-bottom: 72px;
-    width: 100%;
-    max-height: 370px;
-    background-image: url(../img/subscribe/subcribe_desk_2x.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  padding-bottom: 72px;
+  padding-top: 72px;
+  width: 100%;
+  max-height: 370px;
+  background-image: url(../img/subscribe/subcribe_desk_2x.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .subscribe-title {
-    font-size: 24px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    color: var(--pr-title-color);
-    padding-top: 72px;
-    padding-bottom: 24px;
-    width: 378px;
-    margin: 0 auto;
+  font-size: 24px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  color: var(--pr-title-color);
+  margin-bottom: 24px;
+  width: 378px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .text-subscribe {
-    text-align: center;
-    letter-spacing: -0.02em;
-    color: var(--pr-title-color);
-    padding-bottom: 24px;
-    width: 467px;
-    margin: 0 auto;
+  text-align: center;
+  letter-spacing: -0.02em;
+  color: var(--pr-title-color);
+  margin-bottom: 24px;
+  width: 467px;
+  margin: 0 auto;
 }
 
 .subscribe-btn {
-    font-size: 18px;
-    line-height: 1.22;
-    color: var(--pr-title-color);
-    background: var(--accent-color);
-    border-radius: 100px;
-    border: none;
-    display: block;
-    margin: 0 auto;
-    transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 18px;
+  line-height: 1.22;
+  color: var(--pr-title-color);
+  background: var(--accent-color);
+  border-radius: 100px;
+  border: none;
+  display: block;
+  margin: 0 auto;
+  transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-btn:hover,
 .subscribe-btn:focus {
-    background: #FCF1E0;
-    color: var(--accent-color);
+  background: #fcf1e0;
+  color: var(--accent-color);
 }
 
 @media screen and (min-width: 320px) {
-    .subsribe-section {
-        max-width: 676px;
-    }
+  .subsribe-section {
+    max-width: 767px;
+    padding: 62px 0;
+  }
 
-    @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-    .hero-section{
-        background-image: url(../img/subscribe/subcribe_mobile_2x.jpg);
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: url(../img/subscribe/subcribe_mobile_2x.jpg);
     }
-    }
+  }
 
-    .text-subscribe{
-        width: 326px;
-    }
+  .text-subscribe {
+    width: 300px;
+    margin-bottom: 24px;
+  }
 
-    .subscribe-title {
+  .subscribe-title {
     font-size: 20px;
     line-height: 1.2;
-    padding-top: 62px;
     width: 291px;
-    }
+  }
 
-    .subscribe-btn {
+  .subscribe-btn {
     font-size: 14px;
     line-height: 1.21;
-    }
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .subsribe-section {
-        max-width: 1199px;
-    }
+  .subsribe-section {
+    max-width: 1199px;
+     padding: 72px 0;
+  }
 
-    .text-subscribe{
-        width: 467px;
-    }
+  .text-subscribe {
+    width: 467px;
+  }
 
-    .subscribe-title {
+  .subscribe-title {
     font-size: 24px;
     line-height: 1.16;
-    padding-top: 72px;
     width: 378px;
-    }
+  }
 
-    .subscribe-btn {
+  .subscribe-btn {
     font-size: 18px;
     line-height: 1.22;
-    }
+  }
 
-     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-    .hero-section{
-        background-image: url(../img/subscribe/subcribe_tablet_2x.jpg);
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: url(../img/subscribe/subcribe_tablet_2x.jpg);
     }
-    }
+  }
 }
 
 @media screen and (min-width: 1200px) {
-    .subsribe-section {
-        max-width: 100%;
-    }
+  .subsribe-section {
+    max-width: 100%;
+  }
 
-    .text-subscribe{
+  .text-subscribe {
     width: 467px;
-    }
+  }
 
-    .subscribe-title {
+  .subscribe-title {
     font-size: 24px;
     line-height: 1.16;
-    padding-top: 72px;
     width: 378px;
-    }
+  }
 
-    .subscribe-btn {
+  .subscribe-btn {
     font-size: 18px;
     line-height: 1.22;
-    }
+  }
 
-        @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
-    .hero-section{
-        background-image: url(../img/subscribe/subcribe_desk_2x.jpg);
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero-section {
+      background-image: url(../img/subscribe/subcribe_desk_2x.jpg);
     }
-    }
+  }
 }
