--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,8 +1,8 @@
 <div class="backdrop" data-modal-2>
   <div class="modal-review">
     <button class="review-close-btn" type="button" data-modal-close-2>
-      <svg width="24" height="24">
-        <use href="./img/sprite.svg#close-modal-review"></use>
+      <svg width="15" height="15">
+        <use href="./img/sprite.svg#icon-vector"></use>
       </svg>
     </button>
     <h2 class="modal-review-title">
