--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,7 +40,7 @@
 
 /* <!------- Modal --------> */
 /* <!------- Buy now ------> */
-/* @import url('./'); */
+@import url('./buy-now.css');
 
 /* <!---- Leave a review about our chocolate ----> */
 /* @import url('./'); */
