--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,6 +1,6 @@
-<div class="buy-now__backdrop backdrop__is-hidden ">
+<div class="buy-now__backdrop is-hidden" data-modal>
     <div class="container buy-now__modal-container">
-        <button type="button" class="buy-now__close-btn">
+        <button type="button" class="buy-now__close-btn" data-modal-close>
             <svg class="buy-now__close-btn-icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-close-buy-now"></use>
             </svg>
