--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,4 +1,4 @@
-<div class="backdrop" data-modal-2>
+<div class="backdrop is-hidden" data-modal-2>
   <div class="modal-review">
     <button class="review-close-btn" type="button" data-modal-close-2>
       <svg width="15" height="15">
