--- a/src/css/top-sellers.css
+++ b/src/css/top-sellers.css
@@ -31,6 +31,11 @@
   margin-top: 20px;
 }
 
+.sellerssds-isdstem-descdsdsription {
+  max-width: 306px;
+  margin-top: 20px;
+}
+
 .sellers-btn {
   display: block;
   margin: 0 auto;
