--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -8,15 +8,14 @@
         top: 0;
         right: 0;
         z-index: 1000;
-        border-radius: 15px;
-        background-color: var(--bg-price-color);
+        background: rgba(46,47,66,.4);
 
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
         transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func);
     }
-    .backdrop__is-hidden {
+    .backdrop__is-hidden-2 {
         opacity: 1;
         visibility: visible;
         pointer-events: auto;
@@ -29,8 +28,12 @@
 @media screen and (max-width: 767px) {
     .buy-now__modal-container {
         min-width: 270px;
+    }
+    .buy-now__modal-container {
         position: relative;
         padding: 32px 24px;
+        border-radius: 15px;
+        background-color: var(--bg-price-color);
         overflow-y: scroll;
     }
 
@@ -109,7 +112,7 @@
         height: 45px;
         padding: 14px 18px;
         margin-bottom: 18px;
-        background-color: var(--bg-price-color);
+        background-color: inherit;
         border: 1.5px solid rgba(17, 17, 17, 0.05);
         filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
         border-radius: 8px;
@@ -149,17 +152,20 @@
         align-items: center;
     }
     .buy-now__modal-tel {
-        font-weight: 500;
-        line-height: 1.21;
-        color: #000000;
         position: relative;
         left: 100%;
         top: 50%;
+
+        padding-right: 8px;
+        font-weight: 500;
+        line-height: 1.21;
+        color: #000000;
+        
         transform: translateY(-50%);
         box-shadow: 1.5px 0px 0px rgba(0, 0, 0, 0.1);
     }
     .buy-now__form-modal {
-        padding-left: 92px;
+        padding-left: 120px;
     }
     .buy-now__modal-form_input::placeholder {
         padding-left: 14px;
@@ -212,6 +218,7 @@
 
         position: relative;
         padding: 48px;
+        background-color: var(--bg-price-color);
         overflow-y: scroll;
     }
     .buy-now__close-btn {
@@ -279,9 +286,13 @@
     .buy-now__user-inform {
         width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: flex-end;
+        gap: 21px;
     }
+    
+
+
 
     .buy-now__modal-form-wrapper {
         display: block;
@@ -303,6 +314,8 @@
         height: 66px;
         padding: 22px 24px;
         margin-bottom: 18px;
+
+        font-size: 18px;
         background-color: var(--bg-price-color);
         border: 1.5px solid rgba(17, 17, 17, 0.05);
         filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
@@ -311,10 +324,10 @@
         transition: border-color var(--transition-dur-and-func);
     }
     .buy-now__name {
-        margin-right: 21px;
+        
     }
     .buy-now__form-modal {
-        padding-left: 92px;
+        padding-left: 120px;
     }
     .buy-now__message {
         display:block;
@@ -354,12 +367,15 @@
         align-items: center;
     }
     .buy-now__modal-tel {
-        font-weight: 500;
-        line-height: 1.21;
-        color: #000000;
         position: relative;
         left: 100%;
         top: 50%;
+
+        padding-right: 8px;
+        font-weight: 500;
+        line-height: 1.21;
+        color: #000000;
+        
         transform: translateY(-50%);
         box-shadow: 1.5px 0px 0px rgba(0, 0, 0, 0.1);
     }
