--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,4 +1,4 @@
-<div class="buy-now__backdrop backdrop__is-hidden ">
+<div class="buy-now__backdrop backdrop__is-hidden-2 ">
     <div class="container buy-now__modal-container">
         <button type="button" class="buy-now__close-btn">
             <svg class="buy-now__close-btn-icon" width="24" height="24">
@@ -103,7 +103,7 @@
         </label>
         <label for="" class="buy-now__modal-form-field">
             <span class="buy-now__modal-form-wrapper">Phone number</span>
-            <span class="buy-now__modal-form-desc">
+            <span class="buy-now__modal-form-desc"></span>
                 <div class="buy-now__modal-wrap-desk">
                 <input
                 type="tel"
@@ -122,7 +122,6 @@
                 <span class="buy-now__modal-tel">+380</span>
                 </div>
                 </div>
-            </span>
         </label>
         <label for="" class="buy-now__modal-form-field">
             <span class="buy-now__modal-form-wrapper">Card number</span>
