--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,100 +1,64 @@
-<<<<<<< Updated upstream
-
-=======
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advantages</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link 
-          href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-          rel="stylesheet">
- 
-    <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-
-      <link rel="stylesheet" href="./css/advantages.css">
-      <!<link rel="stylesheet" href="./css/mobile.css">
-      <link rel="stylesheet" href="./css/tablet.css">
-      <link rel="stylesheet" href="./css/desctop.css">  -->
-  <!-- </head>
-
-  <body>
-    <main> -->
->>>>>>> Stashed changes
 <!-------------------- Advantages------------------------->
 
 <section class="advantages-section">
-  <div class="advantages-container">       
-
+  <div class="advantages-container">
     <h2 class="visually-hidden">Advantages</h2>
 
     <ul class="advantages-list">
-
       <li class="advantages-item">
-
         <div class="advantages-icon-blok">
           <a href="/" class="advantages-icon">
             <svg class="advantages-box" width="32" height="32">
-             <use href="./img/sprite.svg#icon-section-2-chocolate"></use>
+              <use href="./img/sprite.svg#icon-section-2-chocolate"></use>
             </svg>
           </a>
         </div>
 
         <h3 class="advantages-name">Unsurpassed taste</h3>
         <p class="advantages-text">
-          Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.
+          Crafted with the finest quality cocoa beans and a dedication to
+          perfection, each bite is a decadent experience that simply cannot be
+          matched. Savor the richness and complexity of our Unsurpassed Taste
+          and discover a new level of chocolate bliss.
         </p>
       </li>
 
       <li class="advantages-item">
-
         <div class="advantages-icon-blok">
           <a href="/" class="advantages-icon">
             <svg class="advantages-box" width="32" height="32">
-             <use href="./img/sprite.svg#icon-section-2-coin"></use>
+              <use href="./img/sprite.svg#icon-section-2-coin"></use>
             </svg>
           </a>
         </div>
 
         <h3 class="advantages-name">Affordable price</h3>
         <p class="advantages-text">
-          Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and indulge in affordable luxury today.
+          Indulge in high-quality chocolate without breaking the bank with
+          Simply Chocolate's selection of affordable treats. Enjoy
+          mouth-watering truffles and velvety chocolate bars without sacrificing
+          taste or quality. Browse our selection and indulge in affordable
+          luxury today.
         </p>
       </li>
 
       <li class="advantages-item">
-
         <div class="advantages-icon-blok">
           <a href="/" class="advantages-icon">
             <svg class="advantages-box" width="32" height="32">
-             <use href="./img/sprite.svg#icon-section-2-spoon"></use>
+              <use href="./img/sprite.svg#icon-section-2-spoon"></use>
             </svg>
           </a>
         </div>
 
         <h3 class="advantages-name">Own production</h3>
         <p class="advantages-text">
-          We take pride in our own production process, ensuring that every step is carefully crafted to perfection. From selecting the finest ingredients to handcrafting each piece, our attention to detail is evident in every bite.
+          We take pride in our own production process, ensuring that every step
+          is carefully crafted to perfection. From selecting the finest
+          ingredients to handcrafting each piece, our attention to detail is
+          evident in every bite.
         </p>
       </li>
-
     </ul>
   </div>
 </section>
-<<<<<<< Updated upstream
-=======
-<!-- 
-
-
-    </main>
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
-  </body>
-</html> -->
->>>>>>> Stashed changes
