--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
       </p>
       <div class="all-button">
         <div class="hero-buttons">
-          <button type="button" class="buy-now" data-modal-open>Buy now</button>
+          <button type="button" class="buy-now" data-hero-open>Buy now</button>
           <button type="button" class="how-its" href="#">How it`s made</button>
         </div>
         <div class="scroll-button">
