--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,6 +1,6 @@
-<div class="backdrop is-hidden" data-modal-2>
+<div class="backdrop is-hidden" data-review-modal>
   <div class="modal-review">
-    <button class="review-close-btn" type="button" data-modal-close-2>
+    <button class="review-close-btn" type="button" data-review-close>
       <svg width="15" height="15">
         <use href="./img/sprite.svg#icon-vector"></use>
       </svg>
