--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -102,6 +102,6 @@
       <div class="reviews-slider-pagination swiper-pagination-1"></div>
     </div>
 
-    <button class="reviews-btn btn" type="button" data-modal-open-2>Leave a review</button>
+    <button class="reviews-btn btn" type="button" data-review-open>Leave a review</button>
   </div>
 </section>
