--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -7,7 +7,7 @@
       finest ingredients and handcrafted with the utmost care, each piece is a
       work of art that is sure to please.
     </p>
-    <button type="button" class="subscribe-btn btn" data-modal-open-1>
+    <button type="button" class="subscribe-btn btn" data-explore-open>
       Subscribe
     </button>
   </div>
