--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -42,7 +42,7 @@
           width="368"
           height="464"
         />
-        <button type="button" class="sellers-btn btn" data-modal-open>Buy now</button>
+        <button type="button" class="sellers-btn btn" data-sellers-open>Buy now</button>
       </li>
     </ul>
   </div>
