--- a/src/css/modal-review.css
+++ b/src/css/modal-review.css
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   z-index: 99;
+  opacity: 1;
   transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1),
     visibility 0.35s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -20,12 +21,11 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden-2 {
+.backdrop.is-hidden {
   opacity: 0;
-  visibility: hidden;
   pointer-events: none;
 }
-.backdrop.is-hidden-2 .modal-review {
+.backdrop.is-hidden .modal-review {
   transform: translate(-50%, -50%) scale(0);
 }
 .review-close-btn {
