--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,6 +1,11 @@
-<div class="buy-now__backdrop backdrop is-hidden" data-modal>
+<div class="buy-now__backdrop is-hidden" data-hero-modal data-sellers-modal>
   <div class="container buy-now__modal-container">
-    <button type="button" class="buy-now__close-btn" data-modal-close>
+    <button
+      type="button"
+      class="buy-now__close-btn"
+      data-hero-close
+      data-sellers-close
+    >
       <svg class="buy-now__close-btn-icon" width="24" height="24">
         <use href="./img/sprite.svg#icon-close-buy-now"></use>
       </svg>
@@ -16,21 +21,21 @@
             <picture>
               <source
                 srcset="
-                  ./img/buy_now/kinder_buy_now_desk.jpg   1x,
+                  ./img/buy_now/kinder_buy_now_desk.jpg    1x,
                   ./img/buy_now/kinder_buy_now_desk_2x.jpg 2x
                 "
                 media="(min-width: 1200px)"
               />
               <source
                 srcset="
-                  ./img/buy_now/kinder_buy_now_tablet.jpg   1x,
+                  ./img/buy_now/kinder_buy_now_tablet.jpg    1x,
                   ./img/buy_now/kinder_buy_now_tablet_2x.jpg 2x
                 "
                 media="(min-width: 768px)"
               />
               <source
                 srcset="
-                  ./img/buy_now/kinder_buy_now_mobile.jpg   1x,
+                  ./img/buy_now/kinder_buy_now_mobile.jpg    1x,
                   ./img/buy_now/kinder_buy_now_mobile_2x.jpg 2x
                 "
                 media="(min-width: 375px)"
@@ -50,21 +55,21 @@
             <picture>
               <source
                 srcset="
-                  ./img/buy_now/praline_buy_now_desk.jpg   1x,
+                  ./img/buy_now/praline_buy_now_desk.jpg    1x,
                   ./img/buy_now/praline_buy_now_desk_2x.jpg 2x
                 "
                 media="(min-width: 1200px)"
               />
               <source
                 srcset="
-                  ./img/buy_now/praline_buy_now_tablet.jpg   1x,
+                  ./img/buy_now/praline_buy_now_tablet.jpg    1x,
                   ./img/buy_now/praline_buy_now_tablet_2x.jpg 2x
                 "
                 media="(min-width: 768px)"
               />
               <source
                 srcset="
-                  ./img/buy_now/praline_buy_now_mobile.jpg   1x,
+                  ./img/buy_now/praline_buy_now_mobile.jpg    1x,
                   ./img/buy_now/praline_buy_now_mobile_2x.jpg 2x
                 "
                 media="(min-width: 375px)"
@@ -84,21 +89,21 @@
             <picture>
               <source
                 srcset="
-                  ./img/buy_now/dark_chocolate_buy_now_desk.jpg   1x,
+                  ./img/buy_now/dark_chocolate_buy_now_desk.jpg    1x,
                   ./img/buy_now/dark_chocolate_buy_now_desk_2x.jpg 2x
                 "
                 media="(min-width: 1200px)"
               />
               <source
                 srcset="
-                  ./img/buy_now/dark_chocolate_buy_now_tablet.jpg   1x,
+                  ./img/buy_now/dark_chocolate_buy_now_tablet.jpg    1x,
                   ./img/buy_now/dark_chocolate_buy_now_tablet_2x.jpg 2x
                 "
                 media="(min-width: 768px)"
               />
               <source
                 srcset="
-                  ./img/buy_now/dark_chocolate_buy_now_mobile.jpg   1x,
+                  ./img/buy_now/dark_chocolate_buy_now_mobile.jpg    1x,
                   ./img/buy_now/dark_chocolate_buy_now_mobile_2x.jpg 2x
                 "
                 media="(min-width: 375px)"
