--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,5 @@
 <!-------------------- Advantages------------------------->
-<section class="advantages-section">
+<section class="advantages-section" id="advantages">
   <div class="advantages-container container">
     <h2 class="visually-hidden">Advantages</h2>
     <ul class="advantages-list">
