--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -32,11 +32,11 @@
     </div>
 <div class="footer-filters">
     <ul class="footer-filters-items">
-        <li class="footer-item"><a href="#" class="footer-link current">Home</a></li>
-        <li class="footer-item"><a href="#" class="footer-link">How it's made?</a></li>
-        <li class="footer-item"><a href="#" class="footer-link">Our products</a></li>
-        <li class="footer-item"><a href="#" class="footer-link">Top sellers</a></li>
-        <li class="footer-item"><a href="#" class="footer-link">Chocolate is loved</a></li>
+        <li class="footer-item"><a href="#header" class="footer-link current">Home</a></li>
+        <li class="footer-item"><a href="#how-its-made" class="footer-link">How it's made?</a></li>
+        <li class="footer-item"><a href="#our-products" class="footer-link">Our products</a></li>
+        <li class="footer-item"><a href="#sellers" class="footer-link">Top sellers</a></li>
+        <li class="footer-item"><a href="#reviews" class="footer-link">Chocolate is loved</a></li>
     </ul>
 </div>
     </div>
