--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header header-fixed">
+<header class="header header-fixed" id="header">
   <div class="container">
     <!--------------MOBILE HEADER--------------------->
     <div class="header-sup header-mobile">
@@ -30,19 +30,19 @@
       <nav class="header-nav">
         <ul class="list-header">
           <li class="nav-list">
-            <a href="#" class="item-nav">Home</a>
+            <a href="#header" class="item-nav">Home</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">How it`s made</a>
+            <a href="#how-its-made" class="item-nav">How it`s made</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">Our producrs</a>
+            <a href="#our-products" class="item-nav">Our producrs</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">Top sellers</a>
+            <a href="#sellers" class="item-nav">Top sellers</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">Chocolate is loved</a>
+            <a href="#reviews" class="item-nav">Chocolate is loved</a>
           </li>
         </ul>
       </nav>
@@ -78,19 +78,19 @@
       <nav class="header-nav">
         <ul class="list-header">
           <li class="nav-list">
-            <a href="#" class="item-nav">Home</a>
+            <a href="#header" class="item-nav">Home</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">How it`s made</a>
+            <a href="#how-its-made" class="item-nav">How it`s made</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">Our producrs</a>
+            <a href="#our-products" class="item-nav">Our producrs</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">Top sellers</a>
+            <a href="#sellers" class="item-nav">Top sellers</a>
           </li>
           <li class="nav-list">
-            <a href="#" class="item-nav">Chocolate is loved</a>
+            <a href="#reviews" class="item-nav">Chocolate is loved</a>
           </li>
         </ul>
       </nav>
