--- a/src/partials/our-products-section.html
+++ b/src/partials/our-products-section.html
@@ -1,4 +1,4 @@
-<section class="our-products">
+<section class="our-products" id="our-products">
   <div class="container">
     <h2 class="title">OUR <span class="our-products-second-title">PRODUCTS</span></h2>
     <div class="container-slider">
