--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews-section">
+<section class="reviews-section" id="reviews">
   <div class="container">
     <h2 class="reviews-section-title title">
       <span class="part-section-title">chocolate </span>
