--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,4 +1,4 @@
-<section class="sellers">
+<section class="sellers" id="sellers">
   <div class="container">
     <h2 class="sellers-title title"><span>Top</span> Sellers</h2>
     <ul class="sellers-list">
