--- a/src/partials/unique-components.html
+++ b/src/partials/unique-components.html
@@ -1,5 +1,5 @@
 <!-- Unique components section -->
-<section class="unique">
+<section class="unique" id="unique">
     <div class="unique-container container">
         <h2 class="unique-title title">
             IT ALL ADDS UP TO ONE EXCEPTIONAL
