--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
     <div class="hero-content">
       <p class="hero-subtitle">
         Treat yourself or a loved one to our finest ingredients for a moment of
@@ -7,7 +7,7 @@
       <div class="all-button">
         <div class="hero-buttons">
           <button type="button" class="buy-now" data-hero-open>Buy now</button>
-          <button type="button" class="how-its" href="#">How it`s made</button>
+          <button type="button" class="how-its" href="#how-its-made">How it`s made</button>
         </div>
         <div class="scroll-button">
           <p class="last-button-text">scroll down</p>
