--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,4 +1,4 @@
-<section class="how-its-made">
+<section class="how-its-made" id="how-its-made">
   <div class="container">
     <h2 class="how-its-made-title">
       HOW IT’S<span class="how-its-made-span">MADE?</span>
