--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,4 +1,4 @@
-<section class="subsribe-section">
+<section class="subsribe-section" id="subsribe">
   <div class="container">
     <h1 class="subscribe-title title">EXPLORE OUR NEW CHOCOLATE FIRST</h1>
     <p class="text-subscribe">
