--- a/src/css/explore-our-new-chocolate-first.css
+++ b/src/css/explore-our-new-chocolate-first.css
@@ -152,6 +152,9 @@
     (min-resolution: 2dppx) {
     .modal {
       background-image: url(../img/explore_our_new_chocolate_first/explore_mobile_2x.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
     }
   }
 }
@@ -198,13 +201,16 @@
     position: unset;
   }
 
-  @media (min-device-pixel-ratio: 2),
+  /* @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .modal {
       background-image: url(../img/explore_our_new_chocolate_first/explore_tablet_2x.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
     }
-  }
+  } */
 }
 
 @media screen and (min-width: 1200px) {
@@ -248,12 +254,15 @@
     margin-left: 8px;
     position: unset;
   }
-
+/* 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .modal {
       background-image: url(../img/explore_our_new_chocolate_first/explore_desk_2x.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
     }
-  }
+  } */
 }
