--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -47,8 +47,7 @@
 }
 
 .our-products {
-  padding-top: calc(77px / 2);
-  padding-bottom: calc(67px / 2);
+  padding-bottom: 72px;
 }
 
 .container-slider {
