--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -22,7 +22,7 @@
                 <li class="footer-twitter">
                   <a href="#" class="footer-link-svg">
                     <svg class="twit-svg" width="22" height="22">
-                        <use href="./img/sprite.svg#icon-twitter"></use>
+                        <use href="./img/sprite.svg#icon-twitter1"></use>
                     </svg>
                   </a>
                 </li>
