--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -58,7 +58,7 @@
           <li class="social-item-menu">
             <a href="#" class="hamburger-link">
               <svg class="hamburger-icon" width="24" height="24">
-                <use href="./img/sprite.svg#icon-twitter"></use>
+                <use href="./img/sprite.svg#icon-twitter1"></use>
               </svg>
             </a>
           </li>
