--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -1,13 +1,12 @@
 <div class="backdrop is-hidden" data-review-modal>
   <div class="modal-review">
     <button class="review-close-btn" type="button" data-review-close>
-      <svg width="15" height="15">
+      <svg width="13" height="13">
         <use href="./img/sprite.svg#icon-vector"></use>
       </svg>
     </button>
     <h2 class="modal-review-title">
-      leave a review about
-      <span class="modal-accent-title">our chocolate</span>
+      leave a review about <span class="modal-accent-title">our chocolate</span>
     </h2>
     <form>
       <div class="form-group-review">
