--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -40,8 +40,8 @@
   border: none;
   display: block;
   margin: 0 auto;
-  transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 300ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-btn:hover,
@@ -65,14 +65,14 @@
   }
 
   .text-subscribe {
-    width: 300px;
+    width: 278px;
     margin-bottom: 24px;
   }
 
   .subscribe-title {
     font-size: 20px;
     line-height: 1.2;
-    width: 291px;
+    width: 278px;
   }
 
   .subscribe-btn {
@@ -84,7 +84,7 @@
 @media screen and (min-width: 768px) {
   .subsribe-section {
     max-width: 1199px;
-     padding: 72px 0;
+    padding: 72px 0;
   }
 
   .text-subscribe {
