--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -77,6 +77,9 @@
   border: 1px solid var(--accent-color);
 }
 @media screen and (min-width: 768px) {
+  .reviews-section {
+    padding-bottom: 100px;
+  }
   .section-title {
     margin-bottom: 50px;
   }
@@ -101,6 +104,9 @@
   }
 }
 @media screen and (min-width: 1200px) {
+  .reviews-section {
+    padding-bottom: 128px;
+  }
   .reviews-btn {
     transition: color var(--transition-dur-and-func),
       background-color var(--transition-dur-and-func);
