--- a/src/css/top-sellers.css
+++ b/src/css/top-sellers.css
@@ -54,19 +54,16 @@
 
 @media screen and (min-width: 768px) {
   .sellers {
-    padding: 50px 0;
-  }
-
-  .sellers-title {
-    font-size: 24px;
-    line-height: 1.17;
-
-    margin-bottom: 50px;
+    padding: 0 0 100px;
   }
 
   .sellers-list {
     display: flex;
     gap: 16px;
+  }
+
+  .sellers-item:nth-child(3) img {
+    margin-bottom: 32px;
   }
 
   .sellers-item img {
@@ -89,7 +86,7 @@
 
 @media screen and (min-width: 1200px) {
   .sellers {
-    padding: 64px 0;
+    padding: 0 0 128px;
   }
 
   .sellers-list {
