--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -45,10 +45,10 @@
       </picture>
 
       <div class="how-container">
-        <b class="try-it-interaction"
-          >Try our chocolates today and discover the perfect balance of
-          flavor</b
-        >
+        <h3 class="try-it-interaction"></h3>
+          Try our chocolates today and <br />
+          discover the perfect balance of flavor
+        </h3>
         <ul class="how-its-made-list">
           <li class="how-its-made-item">
             Heat the milk in a saucepan without bringing it to a boil. Add sugar
