--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -44,7 +44,7 @@
           class="form-textarea-review"
         ></textarea>
       </div>
-      <button type="submit" class="modal-review-btn btn">Submit</button>
+      <button type="submit" class="modal-review-btn btn">Send</button>
     </form>
   </div>
 </div>
