--- a/src/css/explore-our-new-chocolate-first.css
+++ b/src/css/explore-our-new-chocolate-first.css
@@ -44,7 +44,6 @@
   fill: var(--pr-title-color);
   background: none;
   border: none;
-  cursor: pointer;
   transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: absolute;
@@ -52,7 +51,8 @@
   right: 24px;
 }
 
-.modal-close:hover {
+.modal-close:hover,
+.modal-close:focus {
   background: #fcf1e0;
   fill: var(--accent-color);
 }
@@ -254,7 +254,7 @@
     margin-left: 8px;
     position: unset;
   }
-/* 
+  /* 
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
