--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -150,7 +150,6 @@ button {
     padding-top: 671px;
     padding-left: 40px;
     padding-right: 40px;
-    margin-bottom: 25px;
     background-image: linear-gradient(
         180deg,
         rgba(17, 17, 17, 0) 0%,
@@ -164,7 +163,7 @@ button {
   .hero-subtitle {
     max-width: 484px;
     font-size: 28px;
-    line-height: 34px;
+    line-height: 1.21;
   }
   .all-button {
     display: flex;
@@ -218,7 +217,6 @@ button {
     width: 100%;
     max-width: 1136px;
     padding-top: 361px;
-    margin-bottom: 25px;
     background-image: linear-gradient(
         180deg,
         rgba(17, 17, 17, 0) 0%,
