--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -1,27 +1,23 @@
-@media screen and (min-width:270px) {
+@media screen and (min-width: 270px) {
     .buy-now__backdrop {
-        position: fixed;
-        display: flex;
-        
-        width: 100%;
-        height: 100%;
-        padding: 0 20px;
-        top: 0;
-        right: 0;
-        z-index: 1000;
-        background: rgba(46,47,66,.4);
-
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
-        transition: opacity var(--transition-dur-and-func), visibility var(--transition-dur-and-func);
+      position: fixed;
+      display: flex;
+  
+      width: 100%;
+      height: 100%;
+      top: 0;
+      right: 0;
+      z-index: 99;
+      background: rgba(46, 47, 66, 0.4);
+  
+      opacity: 1;
+      transition: opacity var(--transition-dur-and-func);
     }
-    .backdrop__is-hidden-2 {
-        opacity: 1;
-        visibility: visible;
-        pointer-events: auto;
+    .buy-now__backdrop.is-hidden {
+      opacity: 0;
+      pointer-events: none;
     }
-}
+  }
 
 
 /*...................Mobile version............*/
@@ -92,10 +88,6 @@
 
         transition: border-color var(--transition-dur-and-func);
     }
-    .buy-now__gram:hover,
-    .buy-now__gram:focus {
-        border-color: var(--focus-border-color);
-    }
 
     .buy-now__modal-form-wrapper {
         display: block;
@@ -110,8 +102,8 @@
 
     .buy-now__modal-form-desc {
         position: relative;
-    }
 
+    }
     .buy-now__modal-form-input {
         width: 100%;
         height: 45px;
@@ -123,10 +115,6 @@
         border-radius: 8px;
 
         transition: border-color var(--transition-dur-and-func);
-    }
-    .buy-now__modal-form-input:hover,
-    .buy-now__modal-form-input:focus {
-        border-color: var(--focus-border-color);
     }
 
     .buy-now__name {
@@ -210,13 +198,11 @@
         border: var(--accent-color);
         border-radius: 100px;
 
-        transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func), border-color var(--transition-dur-and-func);
+        transition: background-color var(--transition-dur-and-func);
     }
     .buy-now__modal-close-button:hover,
     .buy-now__modal-close-button:focus {
-        background-color: var(--pr-hover-color);
-        color: var(--accent-color);
-        border-color: var(--pr-hover-color)
+        background-color: var(--pr-text-color);
     }
 
 }
@@ -278,20 +264,14 @@
         font-weight: 600;
         line-height: 1.21;
         font-size: 14px;
-        padding: 8px 26px;
+        padding: 8px 28px;
 
         color: var(--sec-title-color);
         border: 1px solid var(--bg-circle-color);
         border-radius: 100px;
         cursor: pointer;
 
-        transition: border-color var(--transition-dur-and-func);
     }
-    .buy-now__gram:hover,
-    .buy-now__gram:focus {
-        border-color: var(--focus-border-color);
-    }
-
     .buy-now__list-title {
         width: 160px;
         
@@ -308,6 +288,9 @@
         gap: 21px;
     }
     
+
+
+
     .buy-now__modal-form-wrapper {
         display: block;
         margin-bottom: 8px;
@@ -323,7 +306,6 @@
     .buy-now__modal-form-desc {
         position: relative;
     }
-
     .buy-now__modal-form-input {
         width: 100%;
         height: 66px;
@@ -331,18 +313,16 @@
         margin-bottom: 18px;
 
         font-size: 18px;
-        background-color: inherit;
+        background-color: var(--bg-price-color);
         border: 1.5px solid rgba(17, 17, 17, 0.05);
         filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
         border-radius: 8px;
 
         transition: border-color var(--transition-dur-and-func);
     }
-    .buy-now__modal-form-input:hover,
-    .buy-now__modal-form-input:focus {
-        border-color: var(--focus-border-color);
+    .buy-now__name {
+        
     }
-
     .buy-now__form-modal {
         padding-left: 120px;
     }
@@ -413,13 +393,11 @@
         border: var(--accent-color);
         border-radius: 100px;
 
-        transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func), border-color var(--transition-dur-and-func);
+        transition: background-color var(--transition-dur-and-func);
     }
     .buy-now__modal-close-button:hover,
     .buy-now__modal-close-button:focus {
-        background-color: var(--pr-hover-color);
-        color: var(--accent-color);
-        border-color: var(--pr-hover-color);
+        background-color: var(--pr-text-color);
     }
 
 }
