--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -45,28 +45,37 @@
       </picture>
 
       <div class="how-container">
-        <h3 class="try-it-interaction"></h3>
+        <h3 class="try-it-interaction">
           Try our chocolates today and <br />
           discover the perfect balance of flavor
         </h3>
         <ul class="how-its-made-list">
           <li class="how-its-made-item">
-            Heat the milk in a saucepan without bringing it to a boil. Add sugar
-            and cocoa powder.
+            <p>
+              Heat the milk in a saucepan without bringing it to a boil. Add
+              sugar and cocoa powder.
+            </p>
           </li>
           <li class="how-its-made-item">
-            At the same time, prepare a water bath. Melt the butter on it.
+            <p>
+              At the same time, prepare a water bath. Melt the butter on it.
+            </p>
           </li>
           <li class="how-its-made-item">
-            "Mix" the milk mixture and already liquid butter. Mix thoroughly
-            with a silicone spatula so that the mass becomes uniform and silky.
+            <p>
+              "Mix" the milk mixture and already liquid butter. Mix thoroughly
+              with a silicone spatula so that the mass becomes uniform and
+              silky.
+            </p>
           </li>
           <li class="how-its-made-item">
-            Heat the mixture over low heat, letting it barely boil.
+            <p>Heat the mixture over low heat, letting it barely boil.</p>
           </li>
           <li class="how-its-made-item">
-            Pour the chocolate into special containers (can be replaced with ice
-            molds). Allow to cool and harden.
+            <p>
+              Pour the chocolate into special containers (can be replaced with
+              ice molds). Allow to cool and harden.
+            </p>
           </li>
         </ul>
       </div>
