--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -5,6 +5,7 @@
   
       width: 100%;
       height: 100%;
+      padding: 0 20px;
       top: 0;
       right: 0;
       z-index: 99;
@@ -64,7 +65,7 @@
     .buy-now__list-wrapper {
         display: flex;
         justify-content: space-between;
-        align-items: center;    
+        align-items: center;
 
         padding: 8px 16px;
         background-color: var(--sec-text-color);
@@ -87,6 +88,10 @@
         border-radius: 100px;
 
         transition: border-color var(--transition-dur-and-func);
+    }
+    .buy-now__gram:hover,
+    .buy-now__gram:focus {
+        border-color: var(--focus-border-color);    
     }
 
     .buy-now__modal-form-wrapper {
@@ -198,11 +203,14 @@
         border: var(--accent-color);
         border-radius: 100px;
 
-        transition: background-color var(--transition-dur-and-func);
+        transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func), border-color var(--transition-dur-and-func);
     }
     .buy-now__modal-close-button:hover,
     .buy-now__modal-close-button:focus {
-        background-color: var(--pr-text-color);
+        background-color: var(--pr-hover-color);
+        color: var(--accent-color);
+        border-color: var(--pr-hover-color);
+
     }
 
 }
@@ -261,17 +269,26 @@
         border-radius: 15px;
     }
     .buy-now__gram {
-        font-weight: 600;
-        line-height: 1.21;
-        font-size: 14px;
-        padding: 8px 28px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
 
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 1.21;
+        padding: 8px 26px;
         color: var(--sec-title-color);
         border: 1px solid var(--bg-circle-color);
         border-radius: 100px;
-        cursor: pointer;
 
+        transition: border-color var(--transition-dur-and-func);
     }
+    .buy-now__gram:hover,
+    .buy-now__gram:focus {
+        border-color: var(--focus-border-color);    
+    }
+    
     .buy-now__list-title {
         width: 160px;
         
@@ -288,9 +305,6 @@
         gap: 21px;
     }
     
-
-
-
     .buy-now__modal-form-wrapper {
         display: block;
         margin-bottom: 8px;
@@ -319,9 +333,6 @@
         border-radius: 8px;
 
         transition: border-color var(--transition-dur-and-func);
-    }
-    .buy-now__name {
-        
     }
     .buy-now__form-modal {
         padding-left: 120px;
@@ -393,11 +404,14 @@
         border: var(--accent-color);
         border-radius: 100px;
 
-        transition: background-color var(--transition-dur-and-func);
+        transition: background-color var(--transition-dur-and-func), color var(--transition-dur-and-func), border-color var(--transition-dur-and-func);
     }
     .buy-now__modal-close-button:hover,
     .buy-now__modal-close-button:focus {
-        background-color: var(--pr-text-color);
+        background-color: var(--pr-hover-color);
+        color: var(--focus-border-color);
+        border-color: var(--pr-hover-color);
+
     }
 
 }
