--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -51,28 +51,30 @@
         </h3>
         <ul class="how-its-made-list">
           <li class="how-its-made-item">
-            <p>
+            <p class="how-its-text">
               Heat the milk in a saucepan without bringing it to a boil. Add
               sugar and cocoa powder.
             </p>
           </li>
           <li class="how-its-made-item">
-            <p>
+            <p class="how-its-text">
               At the same time, prepare a water bath. Melt the butter on it.
             </p>
           </li>
           <li class="how-its-made-item">
-            <p>
+            <p class="how-its-text">
               "Mix" the milk mixture and already liquid butter. Mix thoroughly
               with a silicone spatula so that the mass becomes uniform and
               silky.
             </p>
           </li>
           <li class="how-its-made-item">
-            <p>Heat the mixture over low heat, letting it barely boil.</p>
+            <p class="how-its-text">
+              Heat the mixture over low heat, letting it barely boil.
+            </p>
           </li>
           <li class="how-its-made-item">
-            <p>
+            <p class="how-its-text">
               Pour the chocolate into special containers (can be replaced with
               ice molds). Allow to cool and harden.
             </p>
