--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -37,10 +37,24 @@
 
     .buy-now__close-btn {
         position: absolute;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
         top: 14px;
         right: 14px;
+        width: 28px;
+        height: 28px;
+
         background-color: transparent;
+        border-radius: 50%;
         border: none;
+    }
+    
+    .buy-now__close-btn:hover,
+    .buy-now__close-btn:focus {
+        background-color: var(--pr-hover-color);
+        fill: var(--accent-color);
     }
 
     .buy-now__span {
@@ -118,8 +132,13 @@
         border: 1.5px solid rgba(17, 17, 17, 0.05);
         filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
         border-radius: 8px;
+        cursor: pointer;
 
         transition: border-color var(--transition-dur-and-func);
+    }
+    .buy-now__modal-form-input:hover,
+    .buy-now__modal-form-input:focus {
+        border-color: var(--focus-border-color);
     }
 
     .buy-now__name {
@@ -228,18 +247,29 @@
     }
     .buy-now__close-btn {
         position: absolute;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
         top: 24px;
         right: 24px;
+        width: 38px;
+        height: 38px;
+
+        border-radius: 50%;
         background-color: transparent;
         border: none;
-        width: 28px;
-        height: 28px;
     }
 
     .buy-now__desc {
         font-size: 24px;
         line-height: 1.17;
 
+    }
+    .buy-now__close-btn:hover,
+    .buy-now__close-btn:focus {
+        background-color: var(--pr-hover-color);
+        fill: var(--accent-color);
     }
     .buy-now__span {
         color: var(--accent-color);
@@ -278,6 +308,7 @@
         font-size: 14px;
         line-height: 1.21;
         padding: 8px 26px;
+       
         color: var(--sec-title-color);
         border: 1px solid var(--bg-circle-color);
         border-radius: 100px;
@@ -331,9 +362,15 @@
         border: 1.5px solid rgba(17, 17, 17, 0.05);
         filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
         border-radius: 8px;
-
+        cursor: pointer;
+        
         transition: border-color var(--transition-dur-and-func);
     }
+    .buy-now__modal-form-input:hover,
+    .buy-now__modal-form-input:focus {
+        border-color: var(--focus-border-color);
+    }
+
     .buy-now__form-modal {
         padding-left: 120px;
     }
@@ -398,6 +435,7 @@
         height: 41px;
         font-weight: 600;
         font-size: 14px;
+        outline: none;
 
         background-color: var(--accent-color);
         color: var(--pr-title-color);
@@ -409,7 +447,7 @@
     .buy-now__modal-close-button:hover,
     .buy-now__modal-close-button:focus {
         background-color: var(--pr-hover-color);
-        color: var(--focus-border-color);
+        color: var(--accent-color);
         border-color: var(--pr-hover-color);
 
     }
