--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -121,7 +121,7 @@
       </ul>
 
       <div class="buy-now__user-inform">
-        <label for="" class="buy-now__modal-form-field">
+        <label for="user-name" class="buy-now__modal-form-field">
           <span class="buy-now__modal-form-wrapper">Personal information</span>
           <span class="buy-now__modal-form-desc">
             <input
@@ -136,7 +136,7 @@
           </span>
         </label>
 
-        <label for="" class="buy-now__modal-form-field">
+        <label for="user-surname" class="buy-now__modal-form-field">
           <span class="buy-now__modal-form-desc">
             <input
               type="text"
@@ -151,7 +151,7 @@
         </label>
       </div>
 
-      <label for="" class="buy-now__modal-form-field">
+      <label for="user-email" class="buy-now__modal-form-field">
         <span class="buy-now__modal-form-wrapper">Email</span>
         <span class="buy-now__modal-form-desc">
           <input
@@ -164,7 +164,7 @@
           />
         </span>
       </label>
-      <label for="" class="buy-now__modal-form-field">
+      <label for="user-phone" class="buy-now__modal-form-field">
         <span class="buy-now__modal-form-wrapper">Phone number</span>
         <span class="buy-now__modal-form-desc"></span>
         <div class="buy-now__modal-wrap-desk">
@@ -186,12 +186,12 @@
           </div>
         </div>
       </label>
-      <label for="" class="buy-now__modal-form-field">
+      <label for="text" class="buy-now__modal-form-field">
         <span class="buy-now__modal-form-wrapper">Card number</span>
         <span class="buy-now__modal-form-desc">
           <input
             type="text"
-            name=""
+            name="text"
             class="buy-now__modal-form-input"
             placeholder="Enter card"
             required
@@ -204,7 +204,7 @@
           </svg>
         </span>
       </label>
-      <label for="" class="buy-now__modal-form-field">
+      <label for="user-message" class="buy-now__modal-form-field">
         <span class="buy-now__modal-form-wrapper">Comment</span>
         <span class="buy-now__modal-form-desc">
           <textarea
