--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -38,7 +38,7 @@
           src="./img/how_its_made/how_its_made_mobile.jpg"
           alt="video"
         />
-        <svg width="35px" height="35px" class="how-its-made-icon">
+        <svg class="how-its-made-icon" width="35px" height="35px">
           <use href="./img/sprite.svg#icon-play-icon-chocolate"></use>
         </svg>
       </picture>
