--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,7 @@
       <div class="all-button">
         <div class="hero-buttons">
           <button type="button" class="buy-now" data-hero-open>Buy now</button>
-          <a type="link" class="how-its" href="#how-its-made">How it`s made</a>
+          <a type="button" class="how-its" href="#how-its-made">How it`s made</a>
         </div>
         <div class="scroll-button">
           <p class="last-button-text">scroll down</p>
