--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,11 +7,11 @@
       <div class="all-button">
         <div class="hero-buttons">
           <button type="button" class="buy-now" data-hero-open>Buy now</button>
-          <a type="button" class="how-its" href="#how-its-made">How it`s made</a>
+          <a class="how-its" href="#how-its-made">How it`s made</a>
         </div>
         <div class="scroll-button">
           <p class="last-button-text">scroll down</p>
-          <a type="button" class="scroll" href="#footer">
+          <a class="scroll" href="#footer">
             <svg class="icon-scroll" width="16" height="16">
               <use href="./img/sprite.svg#icon-hero-scroll-down"></use>
             </svg>
