--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -170,7 +170,7 @@
       <label class="buy-now__modal-form-field" for="user-phone">
         <span class="buy-now__modal-form-wrapper">Phone number</span>
         <span class="buy-now__modal-form-desc"></span>
-        <div class="buy-now__modal-wrap-desk">
+        <span class="buy-now__modal-wrap-desk">
           <input
             type="tel"
             name="user-phone"
@@ -182,13 +182,13 @@
             title="xxx-xxx-xx-xx"
             minlength="2"
           />
-          <div class="buy-now__modal-flag">
+          <span class="buy-now__modal-flag">
             <svg class="buy-now__svg-flag" width="24" height="24">
               <use href="./img/sprite.svg#icon-flag"></use>
             </svg>
             <span class="buy-now__modal-tel">+380</span>
-          </div>
-        </div>
+          </span>
+        </span>
       </label>
       <label class="buy-now__modal-form-field" for="text">
         <span class="buy-now__modal-form-wrapper">Card number</span>
