--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -4,44 +4,46 @@
       HOW IT’S<span class="how-its-made-span">MADE?</span>
     </h2>
     <div class="how-its-made-desktop">
-      <picture class="how-its-made-img">
-        <source
-          srcset="
-            ./img/how_its_made/how_its_made_desk.jpg    1x,
-            ./img/how_its_made/how_its_made_desk_2x.jpg 2x
-          "
-          media="(min-width:1200px)"
-        />
-        <source
-          srcset="
-            ./img/how_its_made/how_its_made_tablet.jpg    1x,
-            ./img/how_its_made/how_its_made_tablet_2x.jpg 2x
-          "
-          media="(min-width:768px)"
-        />
-        <source
-          srcset="
-            ./img/how_its_made/how_its_made_mobile.jpg    1x,
-            ./img/how_its_made/how_its_made_mobile_2x.jpg 2x
-          "
-          media="(min-width:375px)"
-        />
-        <source
-          srcset="
-            ./img/how_its_made/how_its_made_mobile.jpg    1x,
-            ./img/how_its_made/how_its_made_mobile_2x.jpg 2x
-          "
-          media="(max-width:374px)"
-        />
-        <img
-          class="how-its-made-image"
-          src="./img/how_its_made/how_its_made_mobile.jpg"
-          alt="video"
-        />
+      <div class="how-its-made-img-block">
+        <picture class="how-its-made-img">
+          <source
+            srcset="
+              ./img/how_its_made/how_its_made_desk.jpg    1x,
+              ./img/how_its_made/how_its_made_desk_2x.jpg 2x
+            "
+            media="(min-width:1200px)"
+          />
+          <source
+            srcset="
+              ./img/how_its_made/how_its_made_tablet.jpg    1x,
+              ./img/how_its_made/how_its_made_tablet_2x.jpg 2x
+            "
+            media="(min-width:768px)"
+          />
+          <source
+            srcset="
+              ./img/how_its_made/how_its_made_mobile.jpg    1x,
+              ./img/how_its_made/how_its_made_mobile_2x.jpg 2x
+            "
+            media="(min-width:375px)"
+          />
+          <source
+            srcset="
+              ./img/how_its_made/how_its_made_mobile.jpg    1x,
+              ./img/how_its_made/how_its_made_mobile_2x.jpg 2x
+            "
+            media="(max-width:374px)"
+          />
+          <img
+            class="how-its-made-image"
+            src="./img/how_its_made/how_its_made_mobile.jpg"
+            alt="video"
+          />
+        </picture>
         <svg class="how-its-made-icon" width="35px" height="35px">
           <use href="./img/sprite.svg#icon-play-icon-chocolate"></use>
         </svg>
-      </picture>
+      </div>
       <div class="how-container">
         <h3 class="try-it-interaction">
           Try our chocolates today and <br />
