--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -37,13 +37,13 @@
           <img
             class="how-its-made-image"
             src="./img/how_its_made/how_its_made_mobile.jpg"
-            alt="video"
+            alt="video" width="600" height="400"
           />
         </picture>
         <svg class="how-its-made-icon" width="35px" height="35px">
           <use href="./img/sprite.svg#icon-play-icon-chocolate"></use>
         </svg>
-        
+
       </div>
       <div class="how-container">
         <h3 class="try-it-interaction">
