--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -37,7 +37,7 @@
           <img
             class="how-its-made-image"
             src="./img/how_its_made/how_its_made_mobile.jpg"
-            alt="video" width="600" height="400"
+            alt="video" 
           />
         </picture>
         <svg class="how-its-made-icon" width="35px" height="35px">
